# mapca

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CODE_OF_CONDUCT.md  Makefile  README.md  comparison.py  icatb_estimate_dimension.m  mapca_on_openneuro.py  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: python-publish.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat
docs/_templates/: function.rst  module.rst
docs/sphinxext/: github_link.py
mapca/: __about__.py  __init__.py  _version.py  info.py  mapca.py  utils.py
mapca/tests/: conftest.py  test_integration.py  test_mapca.py  test_utils.py
mapca/tests/resources/: comp_ts.npy  varex.npy  varex_norm.npy
notebooks/: pipeline.ipynb
