[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "maPCA"
description = "Moving Average Principal Component Analysis"
readme = "README.md"
requires-python = ">=3.5"
dependencies = [
    "nilearn>=0.7",
    "numpy>=1.16",
    "scipy>=1.2",
    "sklearn > 1.2",
]

[tool.black]
line-length = 99
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | get_version.py
  | versioneer.py
  | mapca/info.py
  | mapca/_version.py
)
'''